Fixed mobile spacing for projects

--- a/src/App.css
+++ b/src/App.css
@@ -254,8 +254,8 @@ section .section-content {
 	border-radius: 4px;
 	color: #333;
 	font-size: 0.8rem;
-	margin-right: 8px;
-	padding: 4px 8px;
+	margin: 8px 8px 0 0;
+    padding: 4px 8px;
 }
 
 .project-content .project-description {
@@ -468,6 +468,41 @@ ul.footer-list {
 		width: calc(100% - 4rem);
 	}
 
+	/* projects */
+	.project {
+		margin: 0rem 0 2rem 0;
+	}
+
+	.project-container {
+		flex-direction: column;
+		padding: 1rem;
+	}
+
+	.project-content {
+		margin: 0 1rem;
+	}
+
+	.project-image > div {
+		height: 12rem;
+	}
+
+	.project-image {
+		width: auto;
+	}
+
+	.project-content .project-links a {
+		font-size: 0.8rem;
+		width: 100%;
+		text-align: center;
+		margin: 1rem 0 1rem 0;
+	}
+
+	.project-content .project-description {
+		font-size: 0.8rem;
+		line-height: 2rem;
+		text-align: left;
+	}
+
 	/* Contact Page */
 	.contact-container .section-title {
 		margin: 0 2rem 4rem 2rem;
@@ -491,15 +526,6 @@ ul.footer-list {
 		height: 2.5em;
 		padding: 0.5em;
 		transition: height 400ms cubic-bezier(0.23, 1, 0.32, 1);
-	}
-
-	/* projects */
-	.project-container {
-		flex-direction: column;
-	}
-
-	.project-image {
-		width: auto;
 	}
 }
 
